# Makima

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING.md  config.toml
src/: config.rs  lib.rs  main.rs
src/cli/: confirm.rs  mod.rs  repl.rs  tool_events.rs  tool_prompts.rs  ui.rs
src/context/: conversation.rs  mod.rs  project.rs
src/llm/: client.rs  mod.rs  streaming.rs  tool_parser.rs  types.rs
src/tools/: akari_tools.rs  bash.rs  csv_to_docx.rs  executor.rs  file_ops.rs  format_liasse.rs  glob.rs  grep.rs  mod.rs  pdf_common.rs  pdf_to_txt.rs  registry.rs
src/web/: mod.rs  routes.rs  server.rs  websocket.rs
