[package]
name = "makima"
version = "0.1.1"
edition = "2021"
default-run = "makima"
description = "A local coding assistant using LM Studio"
authors = ["Makima Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
colored = "2"

# Web server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-tungstenite = "0.24"

# File operations
glob = "0.3"
walkdir = "2"
regex = "1"

# CSV to DOCX conversion
csv = "1.3"
docx-rs = "0.4"

# PDF text extraction
pdf-extract = "0.7"
lopdf = "0.34"         # Pure Rust PDF parsing and image extraction
pdfium-render = { version = "0.8", optional = true }  # Optional: render vector PDFs (requires pdfium.dll)
base64 = "0.22"        # Encode images for vision API
image = "0.25"         # Image processing

# Embedded static files
rust-embed = "8"
mime_guess = "2"

# Utils
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
async-trait = "0.1"
terminal_size = "0.4"
tokio-util = "0.7"

[features]
default = ["pdfium"]  # pdfium enabled by default for vector PDF support
pdfium = ["pdfium-render"]

[[bin]]
name = "makima"
path = "src/main.rs"

[[bin]]
name = "generate_reports"
path = "src/bin/generate_reports.rs"

[[bin]]
name = "test_pdf_ocr"
path = "src/bin/test_pdf_ocr.rs"

[[bin]]
name = "test_single_ocr"
path = "src/bin/test_single_ocr.rs"

[[bin]]
name = "test_liasse_ocr"
path = "src/bin/test_liasse_ocr.rs"

[[bin]]
name = "test_native_extract"
path = "src/bin/test_native_extract.rs"

[[bin]]
name = "analyze_pdf"
path = "src/bin/analyze_pdf.rs"

[[bin]]
name = "test_pdfium_ocr"
path = "src/bin/test_pdfium_ocr.rs"
required-features = ["pdfium"]

[[bin]]
name = "test_full_ocr"
path = "src/bin/test_full_ocr.rs"
required-features = ["pdfium"]
